CMake: fix missing example install

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -21,3 +21,4 @@ install(TARGETS sockpuppet_udp_server DESTINATION bin)
 install(TARGETS sockpuppet_tcp_client DESTINATION bin)
 install(TARGETS sockpuppet_tcp_server DESTINATION bin)
 install(TARGETS sockpuppet_http_server DESTINATION bin)
+install(TARGETS sockpuppet_http_client DESTINATION bin)
