--- a/examples/CMakeLists.txt.in
+++ b/examples/CMakeLists.txt.in
@@ -2,14 +2,13 @@ cmake_minimum_required(VERSION 3.0.0)
 
 project(sockpuppet_demo CXX)
 
-set(SOCKPUPPET_DIR "@CMAKE_INSTALL_PREFIX@" CACHE PATH "Installation directory of sockpuppet")
+# add the last known install location to CMake's search path
+list(APPEND CMAKE_PREFIX_PATH "@CMAKE_INSTALL_PREFIX@/cmake")
 
-include_directories(${SOCKPUPPET_DIR}/include)
-find_library(SOCKPUPPET_LIB sockpuppet ${SOCKPUPPET_DIR}/lib)
+# grab all dependency info from the library's package file
+find_package(sockpuppet REQUIRED)
 
 add_executable(sockpuppet_http_server sockpuppet_http_server.cpp)
-if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-  target_link_libraries(sockpuppet_http_server ${SOCKPUPPET_LIB})
-else()
-  target_link_libraries(sockpuppet_http_server ${SOCKPUPPET_LIB} WS2_32.Lib)
-endif()
+
+# forward the dependency info to the target
+target_link_libraries(sockpuppet_http_server sockpuppet)
