remove access restrictions, add test for internals access
bridge/PIMPL is access-restricting enough
experimental use is possible by including internal headers

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -50,6 +50,9 @@ else()
   target_link_libraries(sockpuppet_tcp_async_performance_test sockpuppet)
 endif()
 
+add_executable(sockpuppet_internals_test sockpuppet_internals_test.cpp)
+target_link_libraries(sockpuppet_internals_test sockpuppet)
+
 enable_testing()
 add_test(NAME sockpuppet_address_test COMMAND sockpuppet_address_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
 add_test(NAME sockpuppet_udp_test COMMAND sockpuppet_udp_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
@@ -59,6 +62,7 @@ add_test(NAME sockpuppet_tcp_buffered_test COMMAND sockpuppet_tcp_buffered_test 
 add_test(NAME sockpuppet_udp_async_test COMMAND sockpuppet_udp_async_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
 add_test(NAME sockpuppet_tcp_async_test COMMAND sockpuppet_tcp_async_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
 add_test(NAME sockpuppet_tcp_async_performance_test COMMAND sockpuppet_tcp_async_performance_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
+add_test(NAME sockpuppet_internals_test COMMAND sockpuppet_internals_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
 
 add_custom_target(build_tests
   DEPENDS sockpuppet_address_test
@@ -69,6 +73,7 @@ add_custom_target(build_tests
           sockpuppet_udp_async_test
           sockpuppet_tcp_async_test
           sockpuppet_tcp_async_performance_test
+          sockpuppet_internals_test
 )
 
 add_custom_target(run_tests
@@ -84,3 +89,4 @@ install(TARGETS sockpuppet_tcp_buffered_test DESTINATION bin)
 install(TARGETS sockpuppet_udp_async_test DESTINATION bin)
 install(TARGETS sockpuppet_tcp_async_test DESTINATION bin)
 install(TARGETS sockpuppet_tcp_async_performance_test DESTINATION bin)
+install(TARGETS sockpuppet_internals_test DESTINATION bin)
