--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -53,6 +53,9 @@ endif()
 add_executable(sockpuppet_internals_test sockpuppet_internals_test.cpp)
 target_link_libraries(sockpuppet_internals_test sockpuppet)
 
+add_executable(sockpuppet_scheduler_test sockpuppet_scheduler_test.cpp)
+target_link_libraries(sockpuppet_scheduler_test sockpuppet)
+
 enable_testing()
 add_test(NAME sockpuppet_address_test COMMAND sockpuppet_address_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
 add_test(NAME sockpuppet_udp_test COMMAND sockpuppet_udp_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
@@ -63,6 +66,7 @@ add_test(NAME sockpuppet_udp_async_test COMMAND sockpuppet_udp_async_test WORKIN
 add_test(NAME sockpuppet_tcp_async_test COMMAND sockpuppet_tcp_async_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
 add_test(NAME sockpuppet_tcp_async_performance_test COMMAND sockpuppet_tcp_async_performance_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
 add_test(NAME sockpuppet_internals_test COMMAND sockpuppet_internals_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
+add_test(NAME sockpuppet_scheduler_test COMMAND sockpuppet_scheduler_test WORKING_DIRECTORY $<TARGET_FILE_DIR:sockpuppet>)
 
 add_custom_target(build_tests
   DEPENDS sockpuppet_address_test
@@ -74,6 +78,7 @@ add_custom_target(build_tests
           sockpuppet_tcp_async_test
           sockpuppet_tcp_async_performance_test
           sockpuppet_internals_test
+          sockpuppet_scheduler_test
 )
 
 add_custom_target(run_tests
@@ -90,3 +95,4 @@ install(TARGETS sockpuppet_udp_async_test DESTINATION bin)
 install(TARGETS sockpuppet_tcp_async_test DESTINATION bin)
 install(TARGETS sockpuppet_tcp_async_performance_test DESTINATION bin)
 install(TARGETS sockpuppet_internals_test DESTINATION bin)
+install(TARGETS sockpuppet_scheduler_test DESTINATION bin)
