add example application for ToDo use

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -16,9 +16,13 @@ target_link_libraries(sockpuppet_http_server sockpuppet)
 add_executable(sockpuppet_http_client sockpuppet_http_client.cpp)
 target_link_libraries(sockpuppet_http_client sockpuppet)
 
+add_executable(sockpuppet_silent_song sockpuppet_silent_song.cpp)
+target_link_libraries(sockpuppet_silent_song sockpuppet)
+
 install(TARGETS sockpuppet_udp_client DESTINATION bin)
 install(TARGETS sockpuppet_udp_server DESTINATION bin)
 install(TARGETS sockpuppet_tcp_client DESTINATION bin)
 install(TARGETS sockpuppet_tcp_server DESTINATION bin)
 install(TARGETS sockpuppet_http_server DESTINATION bin)
 install(TARGETS sockpuppet_http_client DESTINATION bin)
+install(TARGETS sockpuppet_silent_song DESTINATION bin)
