--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1.0)
 
 project(sockpuppet CXX)
-set(CMAKE_CXX_STANDARD 14) # C++11 + std::make_unique
+set(CMAKE_CXX_STANDARD 17)
 
 if(${CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT})
   # install to the build directory by default
