travis: bump linux distribution for C++17 support

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ jobs:
 
     - name: "Unix GCC static library"
       os: linux
+      dist: bionic
       compiler: gcc
       env:
         - GENERATOR="Unix Makefiles"
@@ -24,6 +25,7 @@ jobs:
 
     - name: "Unix GCC shared library"
       os: linux
+      dist: bionic
       compiler: gcc
       env:
         - GENERATOR="Unix Makefiles"
