--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_CXX_STANDARD 17)
+
 add_executable(sockpuppet_udp_client sockpuppet_udp_client.cpp)
 target_link_libraries(sockpuppet_udp_client sockpuppet)
 
