--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_CXX_STANDARD 17)
+
 add_executable(sockpuppet_address_test sockpuppet_address_test.cpp)
 target_link_libraries(sockpuppet_address_test sockpuppet)
 
