--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - name: "Windows MSVC17 shared library"
@@ -25,18 +26,24 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - name: cache externals
-        id: cache-externals
-        uses: actions/cache@v3
+      - name: cache externals restore
+        id: cache-externals-restore
+        uses: actions/cache/restore@v3
         with:
           path: external/libressl/install
           key: ${{ matrix.os }}-externals-${{ hashFiles('external/CMakeLists.txt') }}
       - name: configure externals
-        if: steps.cache-externals.outputs.cache-hit != 'true'
+        if: steps.cache-externals-restore.outputs.cache-hit != 'true'
         run: cmake -B build/external -S external ${{ matrix.generator }}
       - name: build externals
-        if: steps.cache-externals.outputs.cache-hit != 'true'
+        if: steps.cache-externals-restore.outputs.cache-hit != 'true'
         run: cmake --build build/external
+      - name: cache externals save
+        id: cache-externals-save
+        uses: actions/cache/save@v3
+        with:
+          path: external/libressl/install
+          key: ${{ steps.cache-externals-restore.outputs.cache-primary-key }}
       - name: configure library
         run: >
           cmake -B build -S . ${{ matrix.generator }}
