CMake: prefer newer OpenSSL if multiple available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,8 @@ target_include_directories(sockpuppet PUBLIC
 if(${WITH_TLS})
   # LibreSSL works fine as well, just had to remove version suffix from installed lib filenames
   message("OPENSSL_ROOT_DIR points to: ${OPENSSL_ROOT_DIR}")
+  SET(CMAKE_FIND_PACKAGE_SORT_ORDER NATURAL)
+  SET(CMAKE_FIND_PACKAGE_SORT_DIRECTION DEC)
   find_package(OpenSSL 2.0.0) # prefer the self-built LibreSSL one if available
   if(NOT OpenSSL_FOUND)
     find_package(OpenSSL REQUIRED) # try again without restrictions
