--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -12,20 +12,38 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: "Windows MSVC17 shared library"
+          - name: "Windows MSVC17 shared library using LibreSSL"
             os: windows-2022
             generator: -G "Visual Studio 17 2022" -A x64
+            ssl: -DOPENSSL_ROOT_DIR:PATH=build/external/libressl/install
             # don't use Debug to work around issue of FindOpenSSL.cmake which leaves us with
             # -- Found OpenSSL: optimized;D:/a/sockpuppet/sockpuppet/build/external/libressl/install/lib/crypto.lib;debug;C:/Program Files/OpenSSL/lib/VC/libcrypto64MDd.lib (found version "2.0.0")
             # which fails at link time
             type: Release
 
-          - name: "Unix GCC shared library"
+          - name: "Windows MSVC17 shared library using OpenSSL"
+            os: windows-2022
+            generator: -G "Visual Studio 17 2022" -A x64
+            type: Debug
+
+          - name: "Unix GCC shared library using LibreSSL"
+            os: ubuntu-latest
+            generator: -G "Unix Makefiles"
+            ssl: -DOPENSSL_ROOT_DIR:PATH=build/external/libressl/install
+            type: Debug
+
+          - name: "Unix GCC shared library using OpenSSL"
             os: ubuntu-latest
             generator: -G "Unix Makefiles"
             type: Debug
 
-          - name: "OSX clang shared library"
+          - name: "OSX clang shared library using LibreSSL"
+            os: macos-latest
+            generator: -G "Unix Makefiles"
+            ssl: -DOPENSSL_ROOT_DIR:PATH=build/external/libressl/install
+            type: Debug
+
+          - name: "OSX clang shared library using OpenSSL"
             os: macos-latest
             generator: -G "Unix Makefiles"
             type: Debug
@@ -34,18 +52,20 @@ jobs:
       - uses: actions/checkout@v3
       - name: cache externals restore
         id: cache-externals-restore
+        if: matrix.ssl
         uses: actions/cache/restore@v3
         with:
           path: build/external/libressl/install
           key: ${{ matrix.os }}-externals-${{ hashFiles('external/CMakeLists.txt') }}
       - name: configure externals
-        if: steps.cache-externals-restore.outputs.cache-hit != 'true'
+        if: matrix.ssl && (steps.cache-externals-restore.outputs.cache-hit != 'true')
         run: cmake -B build/external -S external ${{ matrix.generator }} -DCMAKE_BUILD_TYPE:STRING=${{ matrix.type }}
       - name: build externals
-        if: steps.cache-externals-restore.outputs.cache-hit != 'true'
+        if: matrix.ssl && (steps.cache-externals-restore.outputs.cache-hit != 'true')
         run: cmake --build build/external --config ${{ matrix.type }}
       - name: cache externals save
         id: cache-externals-save
+        if: matrix.ssl
         uses: actions/cache/save@v3
         with:
           path: build/external/libressl/install
@@ -55,7 +75,7 @@ jobs:
           cmake -B build -S . ${{ matrix.generator }}
           -DBUILD_SHARED_LIBS:BOOL=ON
           -DWITH_TLS:BOOL=ON
-          -DOPENSSL_ROOT_DIR:PATH=build/external/libressl/install
+          ${{ matrix.ssl }}
           -DCMAKE_BUILD_TYPE:STRING=${{ matrix.type }}
       - name: build library
         run: cmake --build build --config ${{ matrix.type }}
